# csv_analysis_agent

./: .gitignore  Dockerfile  ENV_SETUP.md  README.md  csv_loader.py  csv_qa_agent.py  example_usage.py  function_router.py  main.py  memory_manager.py  pyproject.toml  requirements.txt  run_streamlit.py  sales_data.csv  sample_data.csv  test_agent.py  test_analytics_classification.py  test_enhanced_summary.py  test_integrated_visualization.py  test_matplotlib_simple.py  test_streamlit_enhanced.py  test_visualization.py  test_with_sample.py
agents/: __init__.py  csv_agent.py
app/: __init__.py  interface.py  main.py  streamlit_app.py
core/: __init__.py  agent_builder.py  agent_manager.py  llm_manager.py  memory_manager.py  tool_manager.py
data_io/: __init__.py  csv_loader.py  query_context.py
models/: __init__.py  config.py  schemas.py
tests/: __init__.py  test_csv_agent.py  test_csv_loader.py
utils/: __init__.py  logger.py  visualizer.py
